--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ location = classpath:log4j2.xml
 # =========================================
 #  Database connectivity settings
 # =========================================
+#mongodb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=app1
 #spring.datasource.url={{DB2_URL}}
 #spring.datasource.username=
 #spring.datasource.password=
